# secman

./: .gitignore  README.md  crypto_utils.py  pyproject.toml  secman.py
libs/: crypto_utils.py
src/: project_secrets.py
src/secman/: __init__.py  __main__.py  easysecrets.py  secman.py  secretsmanager.py
src/secman/libs/: __init__.py  crypto_utils.py
tests/: __init__.py  libs.py  notests_secman_cli.py  test_secman.py  test_secman_cli.py  test_secman_cli_as_module.py  test_secman_crypto.py  test_secman_easysecrets.py  test_secman_execution.py  test_secman_secretsmanager.py  tests_secman.py
tests/input/: project_secrets.py  project_secrets_alt.py  project_secrets_encrypted.py  project_secrets_test_01out.py  project_secrets_test_02inp.py  project_secrets_test_02inp_base.py  project_secrets_test_02out.py  project_secrets_test_03inp.py  project_secrets_test_03inp_encrypted.py  project_secrets_test_03out.py  project_secrets_test_04inp.py  project_secrets_test_04inp_encrypted.py  project_secrets_test_04inp_encrypted_base.py  project_secrets_test_04out.py  project_secrets_test_05inp.py  project_secrets_test_05inp_encrypted.py  project_secrets_test_05inp_encrypted_base.py  project_secrets_test_05out.py
tests/input/variant1/: project_secrets.py
utils/: change-author.sh  pdm_custom_call.sh  pdm_custom_call_works.sh
