[project]
name = "secman"
version = "0.2.0"
description = "Secrets Manager. An easy and safe way to manage your project secrets."
authors = [
    {name = "EduardoRE", email = "rodested@yahoo.com"},
]
dependencies = [
    "requests>=2.32.3",
    "cryptography>=42.0.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[project.urls]
Homepage = "https://github.com/rodested/secman"
Issues = "https://github.com/rodested/secman/issues"

[tool.pdm]
distribution = true

